--- a/WolvenKit.Nvidia/WolvenKit.Nvidia.csproj
+++ b/WolvenKit.Nvidia/WolvenKit.Nvidia.csproj
@@ -3,11 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>net5.0-windows</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
-
-
-
-
 
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
