--- a/WolvenKit.Scaleform/WolvenKit.Scaleform.csproj
+++ b/WolvenKit.Scaleform/WolvenKit.Scaleform.csproj
@@ -3,13 +3,11 @@
   <PropertyGroup>
     <TargetFrameworks>net5.0-windows</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.CodeDom" Version="5.0.0" />
   </ItemGroup>
-
-
-
 
 </Project>
