--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -84,6 +84,7 @@
     <PackageReference Include="WpfAnalyzers" Version="3.5.2" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WPFSoundVisualizationLibNet5" Version="1.0.0" />
     <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
   
