--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -22,6 +22,16 @@
     <NoWarn>$(NoWarn);SA1652</NoWarn>
     <NoWarn>$(NoWarn);SYSLIB0001</NoWarn>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="ViewModels\Wizards\WizardPages\InstallerWizard\**" />
+    <Compile Remove="Views\Wizards\WizardPages\InstallerWizard\**" />
+    <EmbeddedResource Remove="ViewModels\Wizards\WizardPages\InstallerWizard\**" />
+    <EmbeddedResource Remove="Views\Wizards\WizardPages\InstallerWizard\**" />
+    <None Remove="ViewModels\Wizards\WizardPages\InstallerWizard\**" />
+    <None Remove="Views\Wizards\WizardPages\InstallerWizard\**" />
+    <Page Remove="ViewModels\Wizards\WizardPages\InstallerWizard\**" />
+    <Page Remove="Views\Wizards\WizardPages\InstallerWizard\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CP77.CR2W\WolvenKit.Cyberformats.csproj" />
@@ -41,7 +51,6 @@
     <PackageReference Include="Catel.MVVM" Version="5.12.11" />
     <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
     <PackageReference Include="Dirkster.MWindowLib" Version="1.3.1.2" />
-    <PackageReference Include="FmodAudio" Version="2.0.0" />
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="all" />
     <PackageReference Include="CsvHelper" Version="16.1.0" />
     <PackageReference Include="Dirkster.MLib" Version="1.3.1.2" />
@@ -302,10 +311,8 @@
     <Folder Include="Resources\Styles\Custom\" />
     <Folder Include="ViewModels\SettingsPages\SubPages\Integration\" />
     <Folder Include="ViewModels\SettingsPages\SubPages\Packaging\" />
-    <Folder Include="ViewModels\Wizards\WizardPages\InstallerWizard\" />
     <Folder Include="Views\SettingsPages\SubPages\Integration\" />
     <Folder Include="Views\SettingsPages\SubPages\Packaging\" />
-    <Folder Include="Views\Wizards\WizardPages\InstallerWizard\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -313,9 +320,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Update="fmod.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="testmp3.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
