--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -16,6 +16,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Model\Cr2w\**" />
+    <EmbeddedResource Remove="Model\Cr2w\**" />
+    <None Remove="Model\Cr2w\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="DDS\texconv.exe" />
     <None Remove="Resources\archivehashes.zip" />
   </ItemGroup>
@@ -33,15 +39,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Catel.Core" Version="5.12.11" />
-    <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115">
+    <PackageReference Include="Catel.Fody" Version="4.5.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Catel.MVVM" Version="5.12.11" />
     <PackageReference Include="CsvHelper" Version="16.0.0" />
-    <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="FmodAudio" Version="2.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="protobuf-net" Version="3.0.73" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
   </ItemGroup>
