CodeEditorWork + Fody Fix. (First build might still give the error after the 2nd time it should be fine , you could also clean + rebuild and even remove the older packages of fody in their nuget folder (locally)

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -33,7 +33,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Catel.Core" Version="5.12.11" />
-    <PackageReference Include="Catel.Fody" Version="4.5.0">
+    <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Catel.MVVM" Version="5.12.11" />
