--- a/TextEditLib/TextEditLib.csproj
+++ b/TextEditLib/TextEditLib.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dirkster.UnitComboLib" Version="1.1.0" />
+    <PackageReference Include="WolvenKit.AvalonEdit" Version="6.1.1" />
+  </ItemGroup>
 
 </Project>
