--- a/TextEditLib/TextEditLib.csproj
+++ b/TextEditLib/TextEditLib.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="WolvenKit.AvalonEdit" Version="6.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Behaviours\" />
+  </ItemGroup>
+
 </Project>
