debug page added

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -36,6 +36,39 @@
   <ItemGroup>
     <None Remove="Resources\Icons\3.png" />
     <None Remove="Resources\Icons\cloud.png" />
+    <None Remove="Resources\Icons\FileIcons\aiarch3.svg" />
+    <None Remove="Resources\Icons\FileIcons\animation.svg" />
+    <None Remove="Resources\Icons\FileIcons\aningraph.svg" />
+    <None Remove="Resources\Icons\FileIcons\app.svg" />
+    <None Remove="Resources\Icons\FileIcons\audiometadata2.svg" />
+    <None Remove="Resources\Icons\FileIcons\audiovehcurveset.svg" />
+    <None Remove="Resources\Icons\FileIcons\behavior_graph3.svg" />
+    <None Remove="Resources\Icons\FileIcons\bk2.svg" />
+    <None Remove="Resources\Icons\FileIcons\bnk.svg" />
+    <None Remove="Resources\Icons\FileIcons\camcurveset.svg" />
+    <None Remove="Resources\Icons\FileIcons\cfoilage.svg" />
+    <None Remove="Resources\Icons\FileIcons\cubemap.svg" />
+    <None Remove="Resources\Icons\FileIcons\font.svg" />
+    <None Remove="Resources\Icons\FileIcons\json.svg" />
+    <None Remove="Resources\Icons\FileIcons\lights.svg" />
+    <None Remove="Resources\Icons\FileIcons\materialinstance.svg" />
+    <None Remove="Resources\Icons\FileIcons\mesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\nvmesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\particle.svg" />
+    <None Remove="Resources\Icons\FileIcons\quest.svg" />
+    <None Remove="Resources\Icons\FileIcons\scenesversions_Cutscene_versioning.svg" />
+    <None Remove="Resources\Icons\FileIcons\scene_Cutscene.svg" />
+    <None Remove="Resources\Icons\FileIcons\texarray.svg" />
+    <None Remove="Resources\Icons\FileIcons\traffic_collisions.svg" />
+    <None Remove="Resources\Icons\FileIcons\traffic_persistent.svg" />
+    <None Remove="Resources\Icons\FileIcons\w2mesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\w2mi2.svg" />
+    <None Remove="Resources\Icons\FileIcons\W3Dyng.svg" />
+    <None Remove="Resources\Icons\FileIcons\W3Occulsion.svg" />
+    <None Remove="Resources\Icons\FileIcons\wem.svg" />
+    <None Remove="Resources\Icons\FileIcons\xbm.svg" />
+    <None Remove="Resources\Icons\FileIcons\xcube.svg" />
+    <None Remove="Resources\Icons\FileIcons\xml.svg" />
     <None Remove="Resources\Icons\Homelogo.png" />
     <None Remove="Resources\Icons\HomeSickTransp.png" />
     <None Remove="Resources\Icons\HomeSickTransp2.png" />
@@ -48,6 +81,39 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\cloud.png" />
+    <Resource Include="Resources\Icons\FileIcons\aiarch3.svg" />
+    <Resource Include="Resources\Icons\FileIcons\animation.svg" />
+    <Resource Include="Resources\Icons\FileIcons\aningraph.svg" />
+    <Resource Include="Resources\Icons\FileIcons\app.svg" />
+    <Resource Include="Resources\Icons\FileIcons\audiometadata2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\audiovehcurveset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\behavior_graph3.svg" />
+    <Resource Include="Resources\Icons\FileIcons\bk2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\bnk.svg" />
+    <Resource Include="Resources\Icons\FileIcons\camcurveset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\cfoilage.svg" />
+    <Resource Include="Resources\Icons\FileIcons\cubemap.svg" />
+    <Resource Include="Resources\Icons\FileIcons\font.svg" />
+    <Resource Include="Resources\Icons\FileIcons\json.svg" />
+    <Resource Include="Resources\Icons\FileIcons\lights.svg" />
+    <Resource Include="Resources\Icons\FileIcons\materialinstance.svg" />
+    <Resource Include="Resources\Icons\FileIcons\mesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\nvmesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\particle.svg" />
+    <Resource Include="Resources\Icons\FileIcons\quest.svg" />
+    <Resource Include="Resources\Icons\FileIcons\scenesversions_Cutscene_versioning.svg" />
+    <Resource Include="Resources\Icons\FileIcons\scene_Cutscene.svg" />
+    <Resource Include="Resources\Icons\FileIcons\texarray.svg" />
+    <Resource Include="Resources\Icons\FileIcons\traffic_collisions.svg" />
+    <Resource Include="Resources\Icons\FileIcons\traffic_persistent.svg" />
+    <Resource Include="Resources\Icons\FileIcons\w2mesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\w2mi2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\W3Dyng.svg" />
+    <Resource Include="Resources\Icons\FileIcons\W3Occulsion.svg" />
+    <Resource Include="Resources\Icons\FileIcons\wem.svg" />
+    <Resource Include="Resources\Icons\FileIcons\xbm.svg" />
+    <Resource Include="Resources\Icons\FileIcons\xcube.svg" />
+    <Resource Include="Resources\Icons\FileIcons\xml.svg" />
     <Resource Include="Resources\Icons\HomeSickTransp.png" />
     <Resource Include="Resources\Icons\HomeSickTransp2.png" />
     <Resource Include="Resources\Icons\SeeTroughIcon.png" />
