CodeEditorWork + Fody Fix.  (#364)
* CodeEditorWork + Fody Fix. (First build might still give the error after the 2nd time it should be fine , you could also clean + rebuild and even remove the older packages of fody in their nuget folder (locally)

* TextEditLib Net5

* Text Edit Lib Based on EDI Update.

* Fix build

* Edi Extras Into TextEditLib

* debug page added

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -36,6 +36,39 @@
   <ItemGroup>
     <None Remove="Resources\Icons\3.png" />
     <None Remove="Resources\Icons\cloud.png" />
+    <None Remove="Resources\Icons\FileIcons\aiarch3.svg" />
+    <None Remove="Resources\Icons\FileIcons\animation.svg" />
+    <None Remove="Resources\Icons\FileIcons\aningraph.svg" />
+    <None Remove="Resources\Icons\FileIcons\app.svg" />
+    <None Remove="Resources\Icons\FileIcons\audiometadata2.svg" />
+    <None Remove="Resources\Icons\FileIcons\audiovehcurveset.svg" />
+    <None Remove="Resources\Icons\FileIcons\behavior_graph3.svg" />
+    <None Remove="Resources\Icons\FileIcons\bk2.svg" />
+    <None Remove="Resources\Icons\FileIcons\bnk.svg" />
+    <None Remove="Resources\Icons\FileIcons\camcurveset.svg" />
+    <None Remove="Resources\Icons\FileIcons\cfoilage.svg" />
+    <None Remove="Resources\Icons\FileIcons\cubemap.svg" />
+    <None Remove="Resources\Icons\FileIcons\font.svg" />
+    <None Remove="Resources\Icons\FileIcons\json.svg" />
+    <None Remove="Resources\Icons\FileIcons\lights.svg" />
+    <None Remove="Resources\Icons\FileIcons\materialinstance.svg" />
+    <None Remove="Resources\Icons\FileIcons\mesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\nvmesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\particle.svg" />
+    <None Remove="Resources\Icons\FileIcons\quest.svg" />
+    <None Remove="Resources\Icons\FileIcons\scenesversions_Cutscene_versioning.svg" />
+    <None Remove="Resources\Icons\FileIcons\scene_Cutscene.svg" />
+    <None Remove="Resources\Icons\FileIcons\texarray.svg" />
+    <None Remove="Resources\Icons\FileIcons\traffic_collisions.svg" />
+    <None Remove="Resources\Icons\FileIcons\traffic_persistent.svg" />
+    <None Remove="Resources\Icons\FileIcons\w2mesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\w2mi2.svg" />
+    <None Remove="Resources\Icons\FileIcons\W3Dyng.svg" />
+    <None Remove="Resources\Icons\FileIcons\W3Occulsion.svg" />
+    <None Remove="Resources\Icons\FileIcons\wem.svg" />
+    <None Remove="Resources\Icons\FileIcons\xbm.svg" />
+    <None Remove="Resources\Icons\FileIcons\xcube.svg" />
+    <None Remove="Resources\Icons\FileIcons\xml.svg" />
     <None Remove="Resources\Icons\Homelogo.png" />
     <None Remove="Resources\Icons\HomeSickTransp.png" />
     <None Remove="Resources\Icons\HomeSickTransp2.png" />
@@ -48,6 +81,39 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\cloud.png" />
+    <Resource Include="Resources\Icons\FileIcons\aiarch3.svg" />
+    <Resource Include="Resources\Icons\FileIcons\animation.svg" />
+    <Resource Include="Resources\Icons\FileIcons\aningraph.svg" />
+    <Resource Include="Resources\Icons\FileIcons\app.svg" />
+    <Resource Include="Resources\Icons\FileIcons\audiometadata2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\audiovehcurveset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\behavior_graph3.svg" />
+    <Resource Include="Resources\Icons\FileIcons\bk2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\bnk.svg" />
+    <Resource Include="Resources\Icons\FileIcons\camcurveset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\cfoilage.svg" />
+    <Resource Include="Resources\Icons\FileIcons\cubemap.svg" />
+    <Resource Include="Resources\Icons\FileIcons\font.svg" />
+    <Resource Include="Resources\Icons\FileIcons\json.svg" />
+    <Resource Include="Resources\Icons\FileIcons\lights.svg" />
+    <Resource Include="Resources\Icons\FileIcons\materialinstance.svg" />
+    <Resource Include="Resources\Icons\FileIcons\mesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\nvmesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\particle.svg" />
+    <Resource Include="Resources\Icons\FileIcons\quest.svg" />
+    <Resource Include="Resources\Icons\FileIcons\scenesversions_Cutscene_versioning.svg" />
+    <Resource Include="Resources\Icons\FileIcons\scene_Cutscene.svg" />
+    <Resource Include="Resources\Icons\FileIcons\texarray.svg" />
+    <Resource Include="Resources\Icons\FileIcons\traffic_collisions.svg" />
+    <Resource Include="Resources\Icons\FileIcons\traffic_persistent.svg" />
+    <Resource Include="Resources\Icons\FileIcons\w2mesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\w2mi2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\W3Dyng.svg" />
+    <Resource Include="Resources\Icons\FileIcons\W3Occulsion.svg" />
+    <Resource Include="Resources\Icons\FileIcons\wem.svg" />
+    <Resource Include="Resources\Icons\FileIcons\xbm.svg" />
+    <Resource Include="Resources\Icons\FileIcons\xcube.svg" />
+    <Resource Include="Resources\Icons\FileIcons\xml.svg" />
     <Resource Include="Resources\Icons\HomeSickTransp.png" />
     <Resource Include="Resources\Icons\HomeSickTransp2.png" />
     <Resource Include="Resources\Icons\SeeTroughIcon.png" />
@@ -69,10 +135,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AvalonEdit" Version="6.0.1" />
     <PackageReference Include="Catel.Core" Version="5.12.11" />
     <PackageReference Include="Catel.MVVM" Version="5.12.11" />
-    <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
+    <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115" PrivateAssets="all" />
     <PackageReference Include="Dirkster.MWindowLib" Version="1.3.1.2" />
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="all" />
@@ -112,6 +177,7 @@
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" NoWarn="NU1701" />
     <PackageReference Include="taglib-sharp-netstandard2.0" Version="2.1.0" />
     <PackageReference Include="WolvenKit.AvalonDock.Themes.VS2013" Version="4.50.4" />
+    <PackageReference Include="WolvenKit.AvalonEdit" Version="6.1.1" />
     <PackageReference Include="WolvenKit.Orchestra.Core" Version="4.2.1" />
     <PackageReference Include="WolvenKit.Shell.Ribbon.FluentMahApps" Version="4.2.1" />
     <PackageReference Include="WolvenKit.WPFSoundVisualizationLibNet5" Version="1.0.1" />
