--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -16,22 +16,22 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.100
+        
     - name: Clean
       run: dotnet clean ./WolvenKit.sln --configuration Release && dotnet nuget locals all --clear
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ./WolvenKit.sln 
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build ./WolvenKit.sln --configuration Release --no-restore
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.1
       with:
         name: artifact
         path: ./WolvenKit/bin/Release/net5.0-windows
-    - name: Zip Release
-      uses: papeloto/action-zip@v1
+    - uses: papeloto/action-zip@v1
       with:
         files: ./WolvenKit/bin/Release/net5.0-windows
-        dest: WolvenKit.zip
+        dest: wolvenkit.zip
     - name: Deploy Nightly
       uses: WebFreak001/deploy-nightly@v1.1.0
       env:
@@ -39,6 +39,6 @@ jobs:
       with:
         upload_url: https://uploads.github.com/repos/WolvenKit/Wolven-kit/releases/11743470/assets{?name,label}
         release_id: 11743470
-        asset_path: WolvenKit.zip
+        asset_path: wolvenkit.zip
         asset_name: WolvenKit-Nightly-$$.zip
         asset_content_type: application/zip
