--- a/CP77Tools/CP77Tools.csproj
+++ b/CP77Tools/CP77Tools.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Luna.ConsoleProgressBar" Version="1.0.29" />
     <PackageReference Include="CsvHelper" Version="21.1.1" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
   </ItemGroup>
 
