--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,44 @@ jobs:
         tag_name: commit-${{ github.sha }}
         draft: true
 
+  wkit-windows:
+    runs-on: windows-latest
+    needs: create_release
+
+    steps:
+    - name: checkout
+      uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.100
+    - name: dotnet clean
+      run: dotnet clean ./WolvenKit.sln --configuration Release && dotnet nuget locals all --clear
+    - name: dotnet restore
+      run: dotnet restore ./WolvenKit.sln 
+
+    - name: dotnet build WolvenKit.sln
+      run: dotnet build ./WolvenKit.sln --configuration Release --no-restore
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.1
+      with:
+        name: artifact_wkit-windows
+        path: ./WolvenKit/bin/Release/net5.0-windows
+    - name: zip
+      uses: papeloto/action-zip@v1
+      with:
+        files: ./WolvenKit/bin/Release/net5.0-windows
+        dest: wolvenkit.zip
+    
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{needs.create_release.outputs.upload_url }}
+        asset_path: ./wolvenkit.zip
+        asset_name: wolvenkit.zip
+        asset_content_type: application/zip
 
   console-windows:
     runs-on: windows-latest
@@ -46,9 +84,10 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.1
       with:
-        name: artifact
+        name: artifact_console-windows
         path: ./CP77Tools/bin/Release/net5.0-windows
-    - uses: papeloto/action-zip@v1
+    - name: zip
+      uses: papeloto/action-zip@v1
       with:
         files: ./CP77Tools/bin/Release/net5.0-windows
         dest: wolvenkit_console.zip
@@ -61,46 +100,6 @@ jobs:
         upload_url: ${{needs.create_release.outputs.upload_url }}
         asset_path: ./wolvenkit_console.zip
         asset_name: wolvenkit_console.zip
-        asset_content_type: application/zip
-
-
-  wkit-windows:
-    runs-on: windows-latest
-    needs: create_release
-
-    steps:
-    - name: checkout
-      uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.100
-    - name: dotnet clean
-      run: dotnet clean ./WolvenKit.sln --configuration Release && dotnet nuget locals all --clear
-    - name: dotnet restore
-      run: dotnet restore ./WolvenKit.sln 
-
-    - name: dotnet build WolvenKit.sln
-      run: dotnet build ./WolvenKit.sln --configuration Release --no-restore
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2.2.1
-      with:
-        name: artifact
-        path: ./WolvenKit/bin/Release/net5.0-windows
-    - name: zip
-      uses: papeloto/action-zip@v1
-      with:
-        files: ./WolvenKit/bin/Release/net5.0-windows
-        dest: wolvenkit.zip
-    
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{needs.create_release.outputs.upload_url }}
-        asset_path: ./wolvenkit.zip
-        asset_name: wolvenkit.zip
         asset_content_type: application/zip
       
   console-OSX:
@@ -124,9 +123,10 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.1
       with:
-        name: artifact
+        name: artifact_console-OSX
         path: ./CP77Tools/bin/Release/net5.0-windows
-    - uses: papeloto/action-zip@v1
+    - name: zip
+      uses: papeloto/action-zip@v1
       with:
         files: ./CP77Tools/bin/Release/net5.0-windows
         dest: wolvenkit_console_osx.zip
