--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net5.0-windows</TargetFrameworks>
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Catel.Core" Version="5.12.11" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
+    <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="FastMember" Version="1.5.0" />
   </ItemGroup>
 
