Icons(some need to be removed/picked) more debug stuff

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -46,24 +46,51 @@
     <None Remove="Resources\Icons\FileIcons\bk2.svg" />
     <None Remove="Resources\Icons\FileIcons\bnk.svg" />
     <None Remove="Resources\Icons\FileIcons\camcurveset.svg" />
+    <None Remove="Resources\Icons\FileIcons\camcurveset1.svg" />
+    <None Remove="Resources\Icons\FileIcons\camcurveset2.svg" />
     <None Remove="Resources\Icons\FileIcons\cfoilage.svg" />
+    <None Remove="Resources\Icons\FileIcons\charcustpreset.svg" />
+    <None Remove="Resources\Icons\FileIcons\cminimap.svg" />
+    <None Remove="Resources\Icons\FileIcons\conversations.svg" />
     <None Remove="Resources\Icons\FileIcons\cubemap.svg" />
+    <None Remove="Resources\Icons\FileIcons\curveset.svg" />
+    <None Remove="Resources\Icons\FileIcons\dat.svg" />
+    <None Remove="Resources\Icons\FileIcons\envparam.svg" />
+    <None Remove="Resources\Icons\FileIcons\envprob a.svg" />
+    <None Remove="Resources\Icons\FileIcons\envprob b.svg" />
+    <None Remove="Resources\Icons\FileIcons\foldest.svg" />
     <None Remove="Resources\Icons\FileIcons\font.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkanim2.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkcharcustomization.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkfont.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkgamesettings.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkhud.svg" />
+    <None Remove="Resources\Icons\FileIcons\inklayers2.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkmenu3.svg" />
+    <None Remove="Resources\Icons\FileIcons\inkstyle.svg" />
+    <None Remove="Resources\Icons\FileIcons\inktypography2.svg" />
     <None Remove="Resources\Icons\FileIcons\json.svg" />
+    <None Remove="Resources\Icons\FileIcons\lane_connections.svg" />
     <None Remove="Resources\Icons\FileIcons\lights.svg" />
+    <None Remove="Resources\Icons\FileIcons\mappins.svg" />
     <None Remove="Resources\Icons\FileIcons\materialinstance.svg" />
     <None Remove="Resources\Icons\FileIcons\mesh.svg" />
     <None Remove="Resources\Icons\FileIcons\nvmesh.svg" />
+    <None Remove="Resources\Icons\FileIcons\osupak.svg" />
     <None Remove="Resources\Icons\FileIcons\particle.svg" />
+    <None Remove="Resources\Icons\FileIcons\poimappins.svg" />
     <None Remove="Resources\Icons\FileIcons\quest.svg" />
+    <None Remove="Resources\Icons\FileIcons\questphase.svg" />
+    <None Remove="Resources\Icons\FileIcons\rig.svg" />
     <None Remove="Resources\Icons\FileIcons\scenesversions_Cutscene_versioning.svg" />
     <None Remove="Resources\Icons\FileIcons\scene_Cutscene.svg" />
     <None Remove="Resources\Icons\FileIcons\texarray.svg" />
     <None Remove="Resources\Icons\FileIcons\traffic_collisions.svg" />
     <None Remove="Resources\Icons\FileIcons\traffic_persistent.svg" />
+    <None Remove="Resources\Icons\FileIcons\traffic_persistent2.svg" />
+    <None Remove="Resources\Icons\FileIcons\traffic_persistent3.svg" />
     <None Remove="Resources\Icons\FileIcons\w2mesh.svg" />
     <None Remove="Resources\Icons\FileIcons\w2mi2.svg" />
-    <None Remove="Resources\Icons\FileIcons\W3Dyng.svg" />
     <None Remove="Resources\Icons\FileIcons\W3Occulsion.svg" />
     <None Remove="Resources\Icons\FileIcons\wem.svg" />
     <None Remove="Resources\Icons\FileIcons\xbm.svg" />
@@ -91,24 +118,51 @@
     <Resource Include="Resources\Icons\FileIcons\bk2.svg" />
     <Resource Include="Resources\Icons\FileIcons\bnk.svg" />
     <Resource Include="Resources\Icons\FileIcons\camcurveset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\camcurveset1.svg" />
+    <Resource Include="Resources\Icons\FileIcons\camcurveset2.svg" />
     <Resource Include="Resources\Icons\FileIcons\cfoilage.svg" />
+    <Resource Include="Resources\Icons\FileIcons\charcustpreset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\cminimap.svg" />
+    <Resource Include="Resources\Icons\FileIcons\conversations.svg" />
     <Resource Include="Resources\Icons\FileIcons\cubemap.svg" />
+    <Resource Include="Resources\Icons\FileIcons\curveset.svg" />
+    <Resource Include="Resources\Icons\FileIcons\dat.svg" />
+    <Resource Include="Resources\Icons\FileIcons\envparam.svg" />
+    <Resource Include="Resources\Icons\FileIcons\envprob a.svg" />
+    <Resource Include="Resources\Icons\FileIcons\envprob b.svg" />
+    <Resource Include="Resources\Icons\FileIcons\foldest.svg" />
     <Resource Include="Resources\Icons\FileIcons\font.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkanim2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkcharcustomization.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkfont.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkgamesettings.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkhud.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inklayers2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkmenu3.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inkstyle.svg" />
+    <Resource Include="Resources\Icons\FileIcons\inktypography2.svg" />
     <Resource Include="Resources\Icons\FileIcons\json.svg" />
+    <Resource Include="Resources\Icons\FileIcons\lane_connections.svg" />
     <Resource Include="Resources\Icons\FileIcons\lights.svg" />
+    <Resource Include="Resources\Icons\FileIcons\mappins.svg" />
     <Resource Include="Resources\Icons\FileIcons\materialinstance.svg" />
     <Resource Include="Resources\Icons\FileIcons\mesh.svg" />
     <Resource Include="Resources\Icons\FileIcons\nvmesh.svg" />
+    <Resource Include="Resources\Icons\FileIcons\osupak.svg" />
     <Resource Include="Resources\Icons\FileIcons\particle.svg" />
+    <Resource Include="Resources\Icons\FileIcons\poimappins.svg" />
     <Resource Include="Resources\Icons\FileIcons\quest.svg" />
+    <Resource Include="Resources\Icons\FileIcons\questphase.svg" />
+    <Resource Include="Resources\Icons\FileIcons\rig.svg" />
     <Resource Include="Resources\Icons\FileIcons\scenesversions_Cutscene_versioning.svg" />
     <Resource Include="Resources\Icons\FileIcons\scene_Cutscene.svg" />
     <Resource Include="Resources\Icons\FileIcons\texarray.svg" />
     <Resource Include="Resources\Icons\FileIcons\traffic_collisions.svg" />
     <Resource Include="Resources\Icons\FileIcons\traffic_persistent.svg" />
+    <Resource Include="Resources\Icons\FileIcons\traffic_persistent2.svg" />
+    <Resource Include="Resources\Icons\FileIcons\traffic_persistent3.svg" />
     <Resource Include="Resources\Icons\FileIcons\w2mesh.svg" />
     <Resource Include="Resources\Icons\FileIcons\w2mi2.svg" />
-    <Resource Include="Resources\Icons\FileIcons\W3Dyng.svg" />
     <Resource Include="Resources\Icons\FileIcons\W3Occulsion.svg" />
     <Resource Include="Resources\Icons\FileIcons\wem.svg" />
     <Resource Include="Resources\Icons\FileIcons\xbm.svg" />
