--- a/WolvenKit/Resources/AvalonDock.Layout.config
+++ b/WolvenKit/Resources/AvalonDock.Layout.config
@@ -1,31 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LayoutRoot>
   <RootPanel Orientation="Horizontal">
-	<LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="383" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="23" FloatingTop="568">
-	  <LayoutAnchorablePane DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="23" FloatingTop="568">
-		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" Title="ProjectExplorer" IsSelected="True" ContentId="ProjectExplorer_Tool" FloatingLeft="23" FloatingTop="568" FloatingWidth="385" FloatingHeight="431" LastActivationTimeStamp="12/04/2020 15:04:12" />
-	  </LayoutAnchorablePane>
-	</LayoutAnchorablePaneGroup>
-	<LayoutPanel Orientation="Vertical">
-	  <LayoutPanel Orientation="Horizontal">
-		<LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="383" FloatingWidth="385" FloatingHeight="431" FloatingLeft="11" FloatingTop="573">
-		  <LayoutAnchorablePane Id="8fdf8f3a-0bd6-4e12-b189-d64361c46b5f" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="11" FloatingTop="573" />
-		</LayoutAnchorablePaneGroup>
-		<LayoutPanel Orientation="Vertical">
-		  <LayoutPanel Orientation="Horizontal">
-			<LayoutDocumentPane />
-		  </LayoutPanel>
-		  <LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="375" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="963" FloatingTop="975">
-			<LayoutAnchorablePane Id="1700c363-79ab-49cb-8ab8-6b029a63ae5d" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="963" FloatingTop="975" />
-		  </LayoutAnchorablePaneGroup>
-		</LayoutPanel>
-	  </LayoutPanel>
-	  <LayoutAnchorablePaneGroup Orientation="Horizontal" DockHeight="405" FloatingWidth="385" FloatingHeight="431" FloatingLeft="960" FloatingTop="973">
-		<LayoutAnchorablePane DockHeight="405" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="960" FloatingTop="973">
-		  <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" Title="Log" IsSelected="True" ContentId="Log_Tool" FloatingLeft="960" FloatingTop="973" FloatingWidth="385" FloatingHeight="431" LastActivationTimeStamp="12/04/2020 15:04:09" />
-		</LayoutAnchorablePane>
-	  </LayoutAnchorablePaneGroup>
-	</LayoutPanel>
+    <LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="375" DockMinWidth="375" FloatingWidth="385" FloatingHeight="316" FloatingLeft="251" FloatingTop="631">
+      <LayoutAnchorablePane DockWidth="375" DockMinWidth="375" FloatingWidth="385" FloatingHeight="316" FloatingLeft="251" FloatingTop="631">
+        <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="ProjectExplorer" IsSelected="True" ContentId="ProjectExplorer_Tool" FloatingLeft="251" FloatingTop="631" FloatingWidth="385" FloatingHeight="316" LastActivationTimeStamp="02/26/2021 14:47:16" />
+      </LayoutAnchorablePane>
+    </LayoutAnchorablePaneGroup>
+    <LayoutPanel Orientation="Vertical">
+      <LayoutPanel Orientation="Horizontal">
+        <LayoutDocumentPane />
+        <LayoutAnchorablePane Id="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" Name="ToolsPane" DockWidth="375" DockMinWidth="375" />
+      </LayoutPanel>
+      <LayoutAnchorablePaneGroup Orientation="Horizontal" DockHeight="312" FloatingWidth="385" FloatingHeight="634" FloatingLeft="1005" FloatingTop="907">
+        <LayoutAnchorablePane DockHeight="312" DockMinWidth="375" FloatingWidth="385" FloatingHeight="634" FloatingLeft="1005" FloatingTop="907">
+          <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Log" IsSelected="True" ContentId="Log_Tool" FloatingLeft="1005" FloatingTop="907" FloatingWidth="385" FloatingHeight="634" LastActivationTimeStamp="02/26/2021 14:47:14" />
+        </LayoutAnchorablePane>
+      </LayoutAnchorablePaneGroup>
+    </LayoutPanel>
   </RootPanel>
   <TopSide />
   <RightSide />
@@ -33,7 +24,25 @@
   <BottomSide />
   <FloatingWindows />
   <Hidden>
-	<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="ProjectExplorer" IsSelected="True" FloatingLeft="11" FloatingTop="573" FloatingWidth="385" FloatingHeight="431" LastActivationTimeStamp="12/04/2020 15:03:48" PreviousContainerId="8fdf8f3a-0bd6-4e12-b189-d64361c46b5f" PreviousContainerIndex="0" />
-	<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Log" IsSelected="True" FloatingLeft="963" FloatingTop="975" FloatingWidth="385" FloatingHeight="864" LastActivationTimeStamp="12/04/2020 15:03:48" PreviousContainerId="1700c363-79ab-49cb-8ab8-6b029a63ae5d" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Bulk Editor" IsSelected="True" ContentId="BulkEditor_Tool" LastActivationTimeStamp="02/26/2021 14:51:51" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Properties" IsSelected="True" ContentId="Properties_Tool" LastActivationTimeStamp="02/26/2021 14:52:07" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Import" IsSelected="True" ContentId="Import_Tool" LastActivationTimeStamp="02/26/2021 14:52:08" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="AssetBrowser" IsSelected="True" ContentId="AssetBrowser_Tool" LastActivationTimeStamp="02/26/2021 14:52:09" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Csv Editor" IsSelected="True" ContentId="CsvEditor_Tool" LastActivationTimeStamp="02/26/2021 14:52:10" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Hex Editor" IsSelected="True" ContentId="HexEditorVM_Tool" LastActivationTimeStamp="02/26/2021 14:52:11" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Code Editor" IsSelected="True" ContentId="CodeEditor_Tool" LastActivationTimeStamp="02/26/2021 14:52:12" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Journal Editor" IsSelected="True" ContentId="JournalEditor_Tool" LastActivationTimeStamp="02/26/2021 14:52:13" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Visual Editor" IsSelected="True" ContentId="VisualEditor_Tool" LastActivationTimeStamp="02/26/2021 14:52:14" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Anims Tool" IsSelected="True" ContentId="Anims_Tool" LastActivationTimeStamp="02/26/2021 14:52:15" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Audio Tool" IsSelected="True" ContentId="AudioTool_Tool" LastActivationTimeStamp="02/26/2021 14:52:15" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Importer Tool" IsSelected="True" ContentId="Importer_Tool" LastActivationTimeStamp="02/26/2021 14:52:16" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="CR2W To Text Tool" IsSelected="True" ContentId="CR2WToTextTool_Tool" LastActivationTimeStamp="02/26/2021 14:52:17" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Game Debugger" IsSelected="True" ContentId="GameDebugger_Tool" LastActivationTimeStamp="02/26/2021 14:52:17" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Menu Creator Tool" IsSelected="True" ContentId="MenuCreator_Tool" LastActivationTimeStamp="02/26/2021 14:52:18" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Plugin Manager" IsSelected="True" ContentId="PluginManager_Tool" LastActivationTimeStamp="02/26/2021 14:52:18" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Radish Tool" IsSelected="True" ContentId="RadishTool_Tool" LastActivationTimeStamp="02/26/2021 14:52:19" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="WCC Tool" IsSelected="True" ContentId="WCCTool_Tool" LastActivationTimeStamp="02/26/2021 14:52:20" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Mimics" IsSelected="True" ContentId="Mimics_Tool" LastActivationTimeStamp="02/26/2021 14:52:20" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="CR2W Editor" IsSelected="True" ContentId="CR2WEditor_Tool" LastActivationTimeStamp="02/26/2021 14:52:21" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
   </Hidden>
 </LayoutRoot>
